Tue May 25 14:06:06 1999  Jeffrey A Law  (law@cygnus.com)

	* output.h (STRIP_NAME_ENCODING): Provide default definition.
	* dwarf2out.c (ASM_NAME_TO_STRING): Use STRIP_NAME_ENCODING.

	* flow.c (mark_set_1): Do not record BLKmode stores as dead
	store elimination candidates.

Mon May 24 14:34:31 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (strength_reduce): Do not clear NOT_EVERY_ITERATION at the
	last CODE_LABEL in a loop if we have previously passed a jump
	to the top of the loop.

Mon May 24 01:02:58 1999  Mark Mitchell  <mark@codesourcery.com>

	* stmt.c (expand_end_bindings): Ignore any elements of VARS that
	are not VAR_DECLs.

Sun May 23 20:31:16 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (strength_reduce): Grow reg_single_usage as needed.

Sun May 23 10:13:20 1999  David O'Brien <obrien@FreeBSD.org>

	* i386/freebsd-elf.h (LINK_SPEC): Change -static to -Bstatic.
	Also remove a useless comment.

Sun May 23 10:05:23 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* pa.md (negdf2,negsf2):  Use fneg instead of fsub on pa 2.0.

Sat May 22 01:27:49 1999  Mark Mitchell  <mark@codesourcery.com>

	* expr.h (lang_expand_constant): Guard with #ifdef TREE_CODE.

Thu May 20 10:00:42 1999   Stephen L Moshier  <moshier@world.std.com>

         * Makefile.in (GCC_FOR_TARGET): Add -I$(build_tooldir)/include.
			 
Thu May 20 09:58:57 1999  Jan Hubicka <hubicka@freesoft.cz>

	* function.c (assign_stack_local): Align stack slot propertly.
	(assign_outer_stack_local): Likewise.
 
Thu May 20 10:38:43 1999  Mark Mitchell  <mark@codesourcery.com>

	* expr.h (lang_expand_constant): Declare.
	* toplev.c (lang_expand_constant): Define it.
	* varasm.c (output_constant): Use it.

Thu May 20 11:28:53 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* optabs.c (expand_cmplxdiv_straight, expand_cmplxdiv_wide):
	Change function definitions to K&R style.

Thu May 20 08:15:00 1999  Bruce Korb <ddsinc09@ix.netcom.com>

	* fixinc/fixincl.c(main): we must not ignore SIGCLD now.
